<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.lili.testinteligenta.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image" />

        <TextView
            style="@style/style_text"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/radiogroup1"
            style="@style/style_radio_group">

            <RadioButton
                android:id="@+id/button1"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked1"
                android:text="@string/answer11" />

            <RadioButton
                android:id="@+id/button2"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked1"
                android:text="@string/answer12" />

            <RadioButton
                android:id="@+id/button3"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked1"
                android:text="@string/answer13" />

            <RadioButton
                android:id="@+id/button4"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked1"
                android:text="@string/answer14" />
        </RadioGroup>

        <TextView
            style="@style/style_text"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/radiogroup2"
            style="@style/style_radio_group">

            <RadioButton
                android:id="@+id/button5"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked2"
                android:text="@string/answer21" />

            <RadioButton
                android:id="@+id/button6"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked2"
                android:text="@string/answer22" />

            <RadioButton
                android:id="@+id/button7"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked2"
                android:text="@string/answer23" />

            <RadioButton
                android:id="@+id/button8"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked2"
                android:text="@string/answer24" />
        </RadioGroup>

        <TextView
            style="@style/style_text"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/radiogroup3"
            style="@style/style_radio_group">

            <RadioButton
                android:id="@+id/button9"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked3"
                android:text="@string/answer31" />

            <RadioButton
                android:id="@+id/button10"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked3"
                android:text="@string/answer32" />

            <RadioButton
                android:id="@+id/button11"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked3"
                android:text="@string/answer33" />

            <RadioButton
                android:id="@+id/button12"
                style="@style/style_radio_button"
                android:onClick="onRadioButtonClicked3"
                android:text="@string/answer34" />
        </RadioGroup>

        <TextView
            style="@style/style_text"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/button13"
            style="@style/style_checkBox"
            android:onClick="onCheckboxClicked"
            android:text="@string/answer41" />

        <CheckBox
            android:id="@+id/button14"
            style="@style/style_checkBox"
            android:onClick="onCheckboxClicked"
            android:text="@string/answer42" />

        <CheckBox
            android:id="@+id/button15"
            style="@style/style_checkBox"
            android:onClick="onCheckboxClicked"
            android:text="@string/answer43" />

        <CheckBox
            android:id="@+id/button16"
            style="@style/style_checkBox"
            android:onClick="onCheckboxClicked"
            android:text="@string/answer44" />

        <TextView
            style="@style/style_text"
            android:text="@string/question5" />

        <EditText
            android:id="@+id/answer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/answer5"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/style_button"
                android:onClick="submitOrder"
                android:text="@string/resultButton" />

            <Button
                style="@style/style_button"
                android:onClick="clickReset"
                android:text="@string/resetButton" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>